tadd repositories, define component schemas to openapi contract, define ticketrepository and userrepository
